# doc2md

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  claude-code-prompt.md  docker-compose.yml  pyproject.toml
src/doc2md/: __init__.py  __main__.py  models.py  server.py
src/doc2md/tools/: auto.py  batch.py  docx.py  pdf.py  pptx.py
src/doc2md/utils/: file_handler.py  markdown.py  metadata.py
tests/: conftest.py  test_docx.py  test_pdf.py  test_pptx.py
